<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.pradita.ac.id.biodata.biodata"
    android:background="@android:color/holo_green_dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/p1"
        android:id="@+id/profile_image"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="22dp"
            android:text="PROFIL SAYA"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@color/orange">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/lahir"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:layout_marginTop="50dp"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk"
                android:layout_marginTop="70dp"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pekerjaan"
                android:layout_marginTop="90dp"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginTop="110dp"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:layout_marginTop="130dp"
                android:textColor="@android:color/white"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:layout_gravity="bottom">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:src="@drawable/email"
                android:layout_marginTop="1dp"
                android:id="@+id/btn_email"
                android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:src="@drawable/call"
                    android:layout_marginTop="0dp"
                    android:id="@+id/btn_call"
                    android:layout_marginLeft="30dp"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:src="@drawable/lokasi"
                    android:layout_marginTop="0dp"
                    android:id="@+id/btn_lokasi"
                    android:layout_marginLeft="300dp"/>
            </FrameLayout>


        </FrameLayout>
    </RelativeLayout>
